Fixed css invisibility GG

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -9,6 +9,8 @@
 	  
 */
 
+p{color:red}
+
 * { padding: 0.5em 0; margin: 0px; }
 
 body {
